Fixed height for '.carousel-wrap'.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1142,7 +1142,7 @@ footer {
 
     .slide,
     .carousel-wrap {
-        height: 450px;
+        height: 471px;
     }
 
     .mdi-chevron-left,
